--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
     "path": "/api/cron/cleanup",
     "schedule": "0 0 * * *"
   }],
-  "buildCommand": "npm install --legacy-peer-deps && npm run build"
+  "installCommand": "npm install --legacy-peer-deps && npm run build"
 }
