--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "mongodb": "^6.20.0",
     "next": "16.0.0",
     "next-auth": "^4.24.11",
+    "nextjs-google-analytics": "^2.3.7",
     "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
